Fixed title font and spacing

--- a/src/controller/styles/controller.scss
+++ b/src/controller/styles/controller.scss
@@ -15,6 +15,8 @@
     display: flex; 
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
+    font-family: $serif; 
     width: 10%;
     > h1, h2 {
         text-align: center;
@@ -25,5 +27,17 @@
     display: flex; 
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
+.nav-area > h1 {
+    letter-spacing: 12px;
+    font-weight: bold;
+    text-indent:-1em;;
+    direction:rtl;
+}
+
+
+.nav-area > h2 { 
+    font-weight: 500;
+}
